# pygents

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  ruff.yml  tests.yml
.github/workflows/workflows/: docs.yml
app/: __init__.py  agent.py  enums.py  errors.py  registry.py  tool.py  turn.py
docs/: index.md  overview.md  quickstart.md  whitepaper.md
docs/concepts/: agents.md  context.md  context_pool.md  context_queue.md  hooks.md  memory.md  tools.md  turns.md  working-memory.md
docs/guides/: ai-agent.md  claude-code-skill.md  context-pool.md  hooks.md  research-assistant.md
docs/reference/: design-decisions.md  design-tables.md  errors.md
pygents/: __init__.py  agent.py  context.py  context_pool.py  context_queue.py  errors.py  hooks.py  memory.py  registry.py  tool.py  turn.py  utils.py
pygents/memory/: __init__.py  working_memory.py
tests/: conftest.py
tests/integration/: test_agent_integration.py
tests/unit/: test_agent.py  test_context.py  test_context_pool.py  test_context_queue.py  test_errors.py  test_hooks.py  test_memory.py  test_registry.py  test_tool.py  test_turn.py  test_utils.py  test_working_memory.py
