[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bump2version>=1.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygents*"]
exclude = ["tests*"]
