[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygents"
version = "0.6.5"
description = "A lightweight async framework for structuring and running AI agents in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "bump2version>=1.0.1",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygents*"]
exclude = ["tests*"]

[tool.coverage.run]
omit = ["pygents/__init__.py"]

[tool.coverage.report]
omit = ["pygents/__init__.py"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
